# rust_snake

./: Cargo.toml  README.md
src/: draw.rs  game.rs  main.rs  snake.rs
